[package]
name = "pi_wtree"
version = "0.1.0"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "Weight tree, used to store content with weight value"
repository = "https://github.com/GaiaWorld/pi_wtree.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "pi_wtree"]

[dependencies]
pi_dyn_uint = "0.1"

[dev-dependencies]
rand = "0.5.4"